@@ -1,3 +1,7 @@
+2014-10-08  Franz Holzinger  <franz@ttproducts.de>
+	* new feature: show private and protected object properties using the Reflection Classes
+	* new feature: ignore some variable names, array keys and object member variable names
+
 2014-08-07  Franz Holzinger  <franz@ttproducts.de>
 	* fix bug with TRACEDEPTH
 	* use a class el for the value output inside of a table
